# smart-delivery

./: LICENSE  README.md
.github/workflows/: backend-test.yml
backend/: .flake8  .gitignore  README.md  pyproject.toml  start.py
backend/smart_delivery/: .env.development  __init__.py  main.py
backend/smart_delivery/api/: dependencies.py
backend/smart_delivery/api/services/: railway_service.py  user_service.py
backend/smart_delivery/api/v1/: __init__.py
backend/smart_delivery/api/v1/endpoints/: __init__.py  auth.py  delivery.py  root.py  users.py
backend/smart_delivery/core/: config.py  jwt.py  security.py
backend/smart_delivery/database/: __init__.py  initialize.py
backend/smart_delivery/database/initialize_data/: stations.csv
backend/smart_delivery/database/tables/: __init__.py  base.py
backend/smart_delivery/database/tables/entities/: __init__.py  railway_station.py  user.py
backend/smart_delivery/database/tables/junctions/: __init__.py  station_distance.py
backend/smart_delivery/schemas/: __init__.py
backend/smart_delivery/schemas/entities/: user.py
backend/smart_delivery/schemas/responses/: __init__.py  info.py  jwt.py  railway.py  standard.py  user.py
backend/smart_delivery/tests/: test_root.py
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
frontend/src/app/api/: auth.service.ts  (+2 more)
frontend/src/environments/: environment.ts
(+27 files in other folders)
