[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Summer practice of NSTU students."
authors = ["alex6712 <vanyukov.alex@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
SQLAlchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
